final css touches, including desktop

--- a/starter-code/css/modules.css
+++ b/starter-code/css/modules.css
@@ -9,6 +9,7 @@
 }
 
 nav > ul { display: none; }
+
 nav > ul > li {
   font-family: times;
   color: #888;
@@ -17,8 +18,10 @@ nav > ul > li {
   border-bottom: 1px solid gray;
   list-style-type: none;
   margin: 0;
-  padding: 0;
+  padding: 15px 0px;
 }
+
+
 
 .fa-bars:hover, .fa:hover ~ ul { display: block; }
 
@@ -29,5 +32,34 @@ nav > ul > li {
         display: none;
     }
 
-    nav > ul { display: block; }
+    body {
+        margin: 0 70px;
+    }
+
+    nav > ul { 
+        display: block; 
+        width: 100%;
+        margin-left: 25px;
+    }
+
+    .pull-right {
+        float: right;
+    }
+    main {
+        clear: both;
+    }
+
+    .site-header {
+        height: 190px;
+    }
+
+    nav > ul > li {
+        display: inline-block;
+        width: 130px;
+        float: left;
+        border: none;
+        margin-right: 15px;
+        
+        
+    }
 }
