--- a/starter-code/css/base.css
+++ b/starter-code/css/base.css
@@ -16,8 +16,32 @@ a {
   text-decoration: none;
   color: #888;
   font-weight: bold;
+  display: inline;
+}
+
+address {
+    display: inline;
+}
+
+.byline {
+    color: #888;
+    padding-top: 10px;
+}
+
+nav a {
+    font-size: .9em;
 }
 
 img {
     max-width: 100%;
+}
+
+main h1 {
+    margin-top: 10px;
+}
+
+p {
+    margin-bottom: 15px;
+    font-size: 1em;
+    margin-top: 10px;
 }
