all done except read me

--- a/ahmed-brian/styles/layout.css
+++ b/ahmed-brian/styles/layout.css
@@ -1,3 +1,12 @@
+.clearfix {
+    clear: both;
+}
+.pull-right {
+    float: right;
+}
+.pull-left {
+    float: left;
+}
 /* Header */
 .site-header {
     background-color: #FFE9AD;
