--- a/christian-jasper/modules/hamburger.css
+++ b/christian-jasper/modules/hamburger.css
@@ -2,31 +2,43 @@ body {
   max-width: 640px;
 }
 
+.site-header-clearfix {
+  background: rgb(177, 126, 33);
+  position: relative;
+}
+
 img {
   max-width: 100%;
 }
 
-.icon-menu: {
+.main-nav {
   display: block;
+  float: left; 
+  position: absolute;
 }
 
 .main-nav:hover ul {
   display: block;
 }
 
-
 ul {
   list-style: none;
-}
-
-ul {
   display: none;
 }
 
 
+
+
 @media only screen and (min-width: 640px) {
+  body {
+    max-width: 100%;
+  }
+  
   .icon-menu {
     display: none;
+  }
+  ul {
+    display: block;
   }
 
 }
